# visor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.yml  serv.service  visor.service
.github/workflows/: release.yml
configs/: config.yml
src/: config.rs  container.rs  docker.rs  instance.rs  main.rs  notify.rs  psutil.rs
src/serv/: serv.rs
systemd/: visor.service
visor/: Cargo.toml
visor-serv/: Cargo.toml
visor-serv/src/: main.rs  services.rs
visor/src/: config.rs  docker.rs  instance.rs  main.rs  notify.rs  psutil.rs  wechat.rs
visor/src/container/: container.rs
visor/src/wechat/: group_robot.rs  mod.rs  wechat.rs
