[package]
name = "visor"
version = "0.1.2"
edition = "2021"
authors = ["K8sCat <rustpanic@gmail.com>"]
homepage = "https://github.com/k8scat/visor"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
psutil = "3.2.1"
shiplift = "0.7"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
clap = "2.34.0"
log = "0.4"
env_logger = "0.8.4"
actix-web = "4"
regex = "1"

[[bin]]
name = "visor-serv"
path = "src/serv/serv.rs"
