[package]
name = "visor-serv"
version = "0.2.9"
edition = "2021"
authors = ["K8sCat <k8scat@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.8.4"
bollard = { git = "https://github.com/k8scat/bollard", branch = "master" }
