[package]
name = "visor"
version = "0.3.0"
description = "监控服务器的资源使用情况，提高服务器的可用性。"
edition = "2021"
authors = ["K8sCat <k8scat@gmail.com>"]
homepage = "https://github.com/k8scat/visor"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
psutil = "3.2.1"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
clap = { version = "3.1.9", features = ["derive"] }
log = "0.4"
env_logger = "0.8.4"
actix-web = "4"
regex = "1"
async-trait = "0.1.53"
chrono = "0.4"
bollard = { git = "https://github.com/k8scat/bollard", branch = "master" }
